# marrowy

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1fe9c0d5c7ab_add_jobs_activity_and_idempotency.py  24fa4f8a2c1d_expand_task_contract_fields.py  5097540f182c_create_initial_marrowy_schema.py
docs/: VALIDATION.md
scripts/: bootstrap.sh  browser_e2e.sh  console.sh  dev_up.sh  doctor.sh  migrate.sh  seed.sh  serve.sh  test.sh
src/marrowy/: __init__.py  devtools.py
src/marrowy/api/: app.py  deps.py
src/marrowy/api/routers/: __init__.py  channels.py  conversations.py  projects.py  ui.py
src/marrowy/api/static/: app.css  app.js
src/marrowy/api/templates/: 404.html  base.html  conversation.html  index.html
src/marrowy/cli/: main.py
src/marrowy/core/: logging.py  settings.py
src/marrowy/db/: models.py  session.py
src/marrowy/domain/: agents.py  enums.py  workers.py
src/marrowy/integrations/: whatsapp.py  whatsapp_relay.py
src/marrowy/providers/: base.py  codex_bridge.py  fake.py
src/marrowy/schemas/: approvals.py  common.py  conversations.py  jobs.py  projects.py  tasks.py
src/marrowy/seeds/: seed.py
src/marrowy/services/: conversations.py  domain_actions.py  events.py  job_runner.py  jobs.py  memory.py  policies.py  projects.py  tasks.py
tests/: conftest.py  test_api.py  test_cli.py  test_domain_actions.py  test_jobs.py  test_providers.py  test_services.py
tests/e2e/: test_browser_ui.py
