[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marrowy"
version = "0.1.0"
description = "Multi-agent conversational orchestration on top of the Codex runtime bridge."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Elian Abrao"},
]
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "jinja2>=3.1,<4",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0.37,<3",
  "sse-starlette>=2.2,<3",
  "typer>=0.15,<1",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "playwright>=1.52,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.26,<1",
  "pytest-cov>=6.0,<7",
]

[project.scripts]
marrowy = "marrowy.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "e2e: browser end-to-end validation",
]
